--- a/OpenCVHW.vcxproj
+++ b/OpenCVHW.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test2.cpp" />
+    <ClCompile Include="networktest.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -81,11 +81,13 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\demo\Desktop\balltrack\opencv\build\include;C:\Users\demo\source\repos\OpenCVHW\OpenCVHW\osc;C:\Users\demo\source\repos\OpenCVHW\OpenCVHW\ip;C:\Program Files (x86)\OptiTrack\Camera SDK\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\demo\Desktop\balltrack\opencv\build\x64\vc15\lib;C:\Program Files %28x86%29\OptiTrack\Camera SDK\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\demo\Desktop\balltrack\opencv\build\include;C:\Users\demo\Desktop\balltrack\opencv\build\include;C:\Users\demo\source\repos\OpenCVHW\OpenCVHW\osc;C:\Users\demo\source\repos\OpenCVHW\OpenCVHW\ip;C:\Program Files (x86)\OptiTrack\Camera SDK\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\demo\Desktop\balltrack\opencv\build\x64\vc15\lib;C:\Users\demo\Desktop\balltrack\opencv\build\x64\vc15\lib;C:\Program Files %28x86%29\OptiTrack\Camera SDK\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>C:\Users\demo\Desktop\balltrack\opencv\build\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>C:\Users\demo\Desktop\balltrack\opencv\build\x64\vc15\lib;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -121,13 +123,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)OpenCVHW\Dependencies\CameraSDK\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\demo\source\repos\OpenCVHW\OpenCVHW\Dependencies\CameraSDK\include;C:\Users\demo\Desktop\balltrack\opencv\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>CameraLibrary2015x64S.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\demo\source\repos\OpenCVHW\OpenCVHW\Dependencies\CameraSDK\lib;&lt;AdditionalLibraryDirectories&gt;;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>CameraLibrary2015x64S.lib;opencv_world460.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\demo\Desktop\balltrack\opencv\build\x64\vc15\lib;C:\Users\demo\source\repos\OpenCVHW\OpenCVHW\Dependencies\CameraSDK\lib;&lt;AdditionalLibraryDirectories&gt;;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <StackReserveSize>4194304</StackReserveSize>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -138,15 +141,16 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)OpenCVHW\Dependencies\CameraSDK\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\demo\source\repos\OpenCVHW\OpenCVHW\Dependencies\CameraSDK\include;C:\Users\demo\Desktop\balltrack\opencv\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\demo\source\repos\OpenCVHW\OpenCVHW\Dependencies\CameraSDK\lib;&lt;AdditionalLibraryDirectories&gt;;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>CameraLibrary2015x64S.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\demo\Desktop\balltrack\opencv\build\x64\vc15\lib;C:\Users\demo\source\repos\OpenCVHW\OpenCVHW\Dependencies\CameraSDK\lib;&lt;AdditionalLibraryDirectories&gt;;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>CameraLibrary2015x64S.lib;opencv_world460.lib</AdditionalDependencies>
+      <StackReserveSize>4194304</StackReserveSize>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
