--- a/OpenCVHW.vcxproj
+++ b/OpenCVHW.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="networktest.cpp" />
+    <ClCompile Include="video_contour.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
