--- a/OpenCVHW.vcxproj.filters
+++ b/OpenCVHW.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="video_contour.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="tinyosc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="tinyosc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
